# mcp-sql-optimizer

./: .dockerignore  .gitignore  Dockerfile  README.md  claude_desktop_config.example.json  demo_client.py  pyproject.toml  requirements.txt  server.py  smithery.yaml
core/: analyzer.py  dialect_detector.py  explain_parser.py  indexer.py  parser.py  rewriter.py
tests/: test_optimizer.py
utils/: formatting.py  sql_utils.py
