[project]
name = "mcp-sql-optimizer"
version = "0.1.0"
description = "A Universal SQL Query Optimizer MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Rajaul Uddin", email = "uddin.rajaul@gmail.com"}
]
dependencies = [
  "mcp>=1.0.0",
  "sqlglot>=20.0.0",
  "pydantic>=2.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
sql-optimizer = "server:main"
